--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,8 +1,23 @@
-/*---------------
-    LIBS
----------------/*
-
-
-/*---------------
+/*----------
     FONTS
----------------/*
+-----------*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
+/*--------------
+    RESET
+--------------*/
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/*----------
+    COMMONS
+-----------*/
+body {
+  font-family: 'Roboto', sans-serif;
+}
+/*--------------
+    TYPO
+--------------*/
